--- a/statistika projekt.tex
+++ b/statistika projekt.tex
@@ -48,7 +48,7 @@ Za vsak tip družine izberemo enostaven slučajen vzorec velikosti $500$ in nari
 \end{figure}
 
 Hitro vidimo, da so vrednosti prvega, drugega in tretjega kvartila pri družinah tipa 1 (družinah z zakonskima ali zunajzakonskima partnerjema) višji od prvega, drugega in tretjega kvartila pri družinah tipa 2 in tipa 3. 
-Iz tega lahko sklepamo, da so  povprečju dohodki omenjenega tipa družin večji od obeh ostalih tipov. Na podoben način lahko sklepamo tudi, da so dohodki v enostarševski družini z očetom v povprečju nekoliko višji od dohodkov enostarševskih družin z materjo. 
+Iz tega lahko sklepamo, da so v povprečju dohodki omenjenega tipa družin večji od obeh ostalih tipov. Na podoben način lahko sklepamo tudi, da so dohodki v enostarševski družini z očetom v povprečju nekoliko višji od dohodkov enostarševskih družin z materjo. 
 Opazimo tudi, da je varianca dohodkov pri družinah tipa 1 večja od variance podatkov o dohodkih družin preostalih tipov. 
 Osamelcev opazimo največ pri družinah tipa 2, podatki pri družinah tipa 3 pa so najmanj razpršeni. 
 Vredno je omeniti tudi, da je pri družinah tipa 1 in tipa 3 porazdelitev dohodkov nekoliko nagnjena k dohodkov višje vrednosti.
@@ -70,7 +70,7 @@ Opažanja so prikazana z vzporednimi škatlami z brki, pri čemer temnejše obar
 Opazimo, da je bil zgoraj izbrani vzorec, kljub temu, da je bil dokaj majhen glede na število vseh podatkov, v veliki meri (vsaj iz vidika ostalih štirih vzorcev) representativen.
 Vidno je namreč, da so vrednosti prvega in tretjega kvartila pri vzorcih dokaj usklajeni. 
 Tudi iz vidika števila osamelcev je prvotno izbran vzorec representativen. 
-Nekoliko se od representativnosti odmaknemo le pri vrednosti drugega kvartila, ki je pri našem vzorcu nekoliko nižje kot pri ostalih, posledično pa so podatki o dohodkih prvotno izbranega vzorca nekoliko nagnjeni k višjim vrednostim.
+Nekoliko se od representativnosti odmaknemo le pri vrednosti drugega kvartila, ki je pri našem vzorcu nekoliko nižje kot pri ostalih, podatki o dohodkih prvotno izbranega vzorca pa so tudi nekoliko nagnjeni k višjim vrednostim.
 \newline
 \newline
 Zadnje podnaloge se za začetek lotimo nekoliko bolj teoretično, ter šele nato vstavimo podatke za izračun željenih vrednosti. 
@@ -87,13 +87,13 @@ $$
 $$
 Izpeljava je navedena v \cite{poj_nepo_var}. V zgornjem zapisu $\sigma_P^2$ označuje s tipom družine pojasnjeno varianco, $\sigma_N^2$ pa nepojasnjeno varianco. Naloga nas sprašuje po obeh. 
 \newline
-Numerično v $python$ datoteki poračunamo približke za pričakovane vrednosti in variance za posamezne skupini, ter po zgoraj zapisanih formulah dobimo, 
-da s tipom družine pojasnjena varianca znaša $113781161.94$, nepojasnjena varianca pa $912604507.95$. Omenimo še, da delež pojasnjene variance ($\eta^2 = \frac{\sigma_{P}^2}{\sigma^2}$) znaša $0.11085$, pojasnjeni standardni odklon pa $10666.83$.
+Numerično v $python$ datoteki poračunamo približke za pričakovane vrednosti in variance za posamezne skupine, ter po zgoraj zapisanih formulah dobimo, 
+da s tipom družine pojasnjena varianca znaša $113781161.94$, nepojasnjena varianca pa $912604507.95$. Omenimo še, da delež pojasnjene variance $\left(\eta^2 = \frac{\sigma_{P}^2}{\sigma^2}\right)$ znaša $0.11085$, pojasnjeni standardni odklon pa $10666.83$.
 \newline
 \newline
 Oglejmo si novo pridobljene podatke v luči preteklih opažanj, predvsem iz vidika povprečnih dohodkov različnim tipov družin. Že v komentarju prve podnaloge smo omenili, da so med povprečnimi dohodki tipov družin opazne razlike.  
 Sedaj opazimo, da je tudi vrednost pojasnjenega standardnega odklona visoka glede na povprečne dohodke posameznih tipov družin (te znašajo $47187.48$ za tip 1, $31637.36$ za tip 2 in $20508.19$ za tip 3), kar dodatno nakazuje na razlike med povprečnimi dohodki posameznih tipov družin.
-Vrednost deleža pojasnjene variance le dodatno potrdi že zapisano.
+Vrednost deleža pojasnjene variance le dodatno potrdi že zapisano, saj vidna oddaljenost od vrednosti $0$ potrjuje, da je povprečje v dokajšni meri odvisno tudi od skupine.
 
 \pagebreak
 
@@ -103,7 +103,7 @@ Podatki pripadajo trem različnim eksperimentom (podatki so ločeni glede na vrs
 Za podan problem sedaj razvijemo teoretični pristop in se lotimo reševanja podnaloge a) in b). 
 \newline
 \newline
-Imamo $n$ neodvisnih, enako porazdeljenih slučajnih spremenljivk, označimo jih z $R_1,~R_2,~\dots,~R_n$. 
+Opazimo $n$ neodvisnih, enako porazdeljenih slučajnih spremenljivk, označimo jih z $R_1,~R_2,~\dots,~R_n$. 
 Porazdeljene naj bodo Rayleighovo, t.j. z gostoto:
 $$
 f_{R_i}(r_{i} \mid \theta)=\left\{\begin{array}{cl}
@@ -118,26 +118,26 @@ $$
 $$
 Lotimo se podnaloge a). Velja:
 $$
-L(\theta \mid (r_1,~r_2,~\dots,~r_n)) = \prod_{i=1}^{n}{L_i(\theta \mid r_i)} = \prod_{i=1}^{n}{f_{R_i}(r_i \mid \theta)}
+L(\theta \mid (R_1,~R_2,~\dots,~R_n)) = \prod_{i=1}^{n}{L_i(\theta \mid R_i)} = \prod_{i=1}^{n}{f_{R_i}(r_i \mid \theta)}
 $$
 in
 $$
-l(\theta \mid (r_1,~r_2,~\dots,~r_n)) = \ln L(\theta \mid (r_1,~r_2,~\dots,~r_n)) = \sum_{i=1}^{n}{\ln \big(f_{R_i}(r_i \mid \theta)\big)}, 
+l(\theta \mid (R_1,~R_2,~\dots,~R_n)) = \ln L(\theta \mid (R_1,~R_2,~\dots,~R_n)) = \sum_{i=1}^{n}{\ln \big(f_{R_i}(r_i \mid \theta)\big)}, 
 $$
 ter zato:
 $$
-l(\theta \mid (r_1,~r_2,~\dots,~r_n)) = -2n \ln(\theta) + \sum_{i=1}^{n}{\ln(r_i)} - \frac{1}{2\theta^2} \sum_{i=1}^{n}{r_i^2}~.
+l(\theta \mid (R_1,~R_2,~\dots,~R_n)) = -2n \ln(\theta) + \sum_{i=1}^{n}{\ln(R_i)} - \frac{1}{2\theta^2} \sum_{i=1}^{n}{R_i^2}~.
 $$
 Iščemo cenilko za $\theta$ po metodi največjega verjetja, zato si ogledamo enakost:
 $$
-0 = \frac{\partial l(\theta \mid (r_1,~\dots,~r_n))}{\partial \theta} = - \frac{2n}{\theta} + \frac{1}{\theta^3}\sum_{i=1}^{n}{r_i^2}.
+0 = \frac{\partial l(\theta \mid (R_1,~\dots,~R_n))}{\partial \theta} = - \frac{2n}{\theta} + \frac{1}{\theta^3}\sum_{i=1}^{n}{R_i^2}.
 $$
 Tu je vredno omeniti, da si je dovolj ogledati zgornjo enakost, ker iščemo maksimum zapisane funkcije, ki ga v limitah definicijskega območja (v našem primeru) ne bomo zavzeli.
 Za cenilko po metodi največjega verjetja tako dobimo:
 $$
-\hat{\theta}_{MNV} = \sqrt{\frac{1}{2n}{\sum_{i=1}^{n}{r_i^2}}}~.
+\hat{\theta}_{MNV} = \sqrt{\frac{1}{2n}{\sum_{i=1}^{n}{R_i^2}}}~.
 $$
-Za rešitev podnaloge b) si oglejmo pričakovano vrednost (Rayleighove) slučajne spremenljivke $R$:
+Za rešitev podnaloge b), si oglejmo pričakovano vrednost (Rayleighove) slučajne spremenljivke $R$:
 $$
 \EX(R) = \int_{0}^{\infty}{r~f(r \mid \theta)~dr}= \int_{0}^{\infty}{\frac{r^2}{\theta^{2}}~\exp\Big(-\frac{r^{2}}{2 \theta^{2}}\Big)~dr}.
 $$
@@ -145,7 +145,7 @@ V integral uvedemo $\tau = \frac{r^{2}}{2 \theta^{2}}$ in dobimo
 $$
 \EX(R) = \int_{0}^{\infty}{\sqrt{2 \tau}~\theta ~e^{-\tau}~ d \tau} = \theta \sqrt{2}\int_{0}^{\infty}{\tau^{1/2}~e^{-\tau}~ d \tau} = \theta\sqrt{2}~\Gamma(3/2) = \theta \sqrt{\frac{\pi}{2}}.
 $$
-Cenilka po metodi momentov je zato podano s predpisom:
+Cenilka po metodi momentov, je zato podano s predpisom:
 $$
 \hat{\theta}_{MM} = \overline{R} \sqrt{\frac{2}{\pi}}.
 $$
@@ -160,7 +160,7 @@ $$
 Sedaj se lotimo reševanja podnaloge c). Ker je cenilka za $\theta$ po metodi momentov nepristranska, velja $MSE(\hat{\theta}_{MM}) = Var(\hat{\theta}_{MM})$. Sedaj varianco tudi poračunajmo.
 \begin{equation*}
     \begin{split}
-    Var(\hat{\theta}_{MM}) = Var\bigg(\overline{R} \sqrt{\frac{2}{\pi}}\bigg) = \frac{2}{\pi} \frac{Var(R)}{n} = \frac{2}{\pi}\frac{\EX(R^2) - (\EX(R))^2}{n} = \\
+    Var(\hat{\theta}_{MM}) = Var\bigg(\overline{R} \sqrt{\frac{2}{\pi}}\bigg) = \frac{2}{\pi} \left(\frac{Var(R)}{n} = \frac{2}{\pi}\frac{\EX(R^2) - (\EX(R))^2}{n}\right) = \\
     = \frac{2}{\pi}\bigg(\frac{2 \theta^2 - \big(\frac{\pi}{2} \theta\big)^2}{n}\bigg) = \frac{\theta^2}{n} \bigg(\frac{4 - \pi}{\pi}\bigg)
     \end{split}
 \end{equation*}
@@ -168,12 +168,12 @@ Po zgornjem komentarju torej velja:
 $$
 MSE(\hat{\theta}_{MM}) = \frac{\theta^2}{n} \bigg(\frac{4 - \pi}{\pi}\bigg)\approx \frac{\theta^2}{n} \cdot 0{,}273.
 $$
-Pri izračunu asimptotične srednje kvadratične napake pri cenilki za $\theta$ po metodi največjega verjetja, nam na pomoč priskoči Fischerjeva informacija. 
+Pri izračunu asimptotične srednje kvadratične napake, pri cenilki za $\theta$ po metodi največjega verjetja, nam na pomoč priskoči Fischerjeva informacija. 
 Velja:
 \begin{equation*}
     \begin{split}
-    FI(\theta) = - \EX\bigg(\frac{\partial^2 l(\theta \mid (r_1,~\dots,~r_n))}{\partial \theta^2}\bigg) = -\EX\bigg(\frac{1}{\theta^4}\bigg(2n\theta^2 - 3 \sum_{i=1}^{n}{r_i^2}\bigg)\bigg) = \\
-    = -\bigg(\frac{1}{\theta^4}\bigg(2n \theta^2 - 3n \EX(R^2)\bigg)\bigg) = -\EX\bigg(\frac{1}{\theta^4}\bigg(2n \theta^2 - 3n \Big(\frac{\pi}{2} \theta^2 + \frac{4- \pi}{2}\theta^2\Big)\bigg)\bigg) = \frac{4n}{\theta^2}, 
+    FI(\theta) = - \EX\bigg(\frac{\partial^2 l(\theta \mid (R_1,~\dots,~R_n))}{\partial \theta^2}\bigg) = -\EX\bigg(\frac{1}{\theta^4}\bigg(2n\theta^2 - 3 \sum_{i=1}^{n}{R_i^2}\bigg)\bigg) = \\
+    = -\bigg(\frac{1}{\theta^4}\bigg(2n \theta^2 - 3n \EX(R^2)\bigg)\bigg) = -\bigg(\frac{1}{\theta^4}\bigg(2n \theta^2 - 3n \Big(\frac{\pi}{2} \theta^2 + \frac{4- \pi}{2}\theta^2\Big)\bigg)\bigg) = \frac{4n}{\theta^2}, 
     \end{split}
 \end{equation*}
 oziroma: 
@@ -184,7 +184,7 @@ Opazimo, da je faktor pred asimptotično srednje kvadratično napako za cenilko,
 \newline
 \newline
 Podnaloga d) nam narekuje oddaljitev od teoretičnih zapisov in izračun številskih ocen. Pomagajmo si z datoteko $statistika\_naloga\_2.py$. 
-Ta nam po obdelavi podatkov za posamezno vrsto Kromatina pove, da številska ocena za $\theta$ po metodi največjega verjetja pri kratkem Kromatinu znaša $1.1238$, pri srednjem Kromatinu znaša $2.0812$, pri dolgem Kromatinu pa $3.4045$.
+Ta nam po obdelavi podatkov za posamezno vrsto Kromatina pove, da številska ocena za $\theta$ po metodi največjega verjetja pri kratkem Kromatinu znaša $1.1238$, pri srednjem Kromatinu znaša $2.0812$, pri dolgem Kromatinu pa $3.3168$.
 Standardno napako lahko sedaj številsko ocenimo s pomočjo številske ocene za $\theta$ (po metodi največjega verjetja). Natančneje, za oceno uporabimo:
 $$
     \widehat{SE}(\hat{\theta}_{MNV}) = \sqrt{\frac{1}{4n}} \cdot\hat{\theta}_{MNV}.
@@ -200,19 +200,19 @@ Zapisane številske ocene si oglejmo na spodnji sliki.
 \end{figure}
 %----------------------------------------------------------------
 Na sliki so prikazani grafi funkcij verjetja posamezne vrste Kromatina, v odvisnosti od parametra modela $\theta$. Kot je zapisano v legendi, so grafi funkcij verjetja za različne vrste Kromatina različno obarvani. 
-Navpična črtkasta črta pri vsaki vrsti Kromatina povezuje vrednost številske ocene za $\theta$ po metodi največjega verjetja (tiste vrste Kromatina) z vrednostjo funkcije verjetja pri dani številski oceni (točka funkcijske vrednost označena s črno piko).
+Navpična črtkasta črta pri vsaki vrsti Kromatina povezuje vrednost številske ocene za $\theta$ po metodi največjega verjetja (tiste vrste Kromatina) z vrednostjo funkcije verjetja pri dani številski oceni (točka funkcijske vrednosti označena s črno piko).
 Na grafu je dobro vidno tudi analitično ozadje metode največjega verjetja, za vsako vrsto Kromatina namreč grafično opazimo, da ima funkcija verjetja (za tisto vrsto Kromatina) v (oziroma blizu) številski oceni za $\theta$ stacionarno točko. 
 Natančneje, opazimo, da v številski oceni zavzamemo maksimum funkcije verjetja.
 \newline 
 Komentirajmo še pomen velikosti (pri nas ocene) standardne napake. Funkcijo verjetja določajo (za vsako vrsto Kromatina) dani podatki (o tisti vrsti Kromatina), ki obenem v model vnašajo slučaj. 
 Zaradi slučajnosti, ki jih vnašajo podatki, bi radi ocenili napako, ki se morebiti pojavi pri tem, ko iz njih konstruiramo oceno (po metodi največjega verjetja) za parameter našega modela, t.j. $\hat{\theta}_{MNV}$.
 Nekoliko bolj direktno, gre v resnici za statistično vrednost, ki kvantificira, koliko se lahko ocenjena vrednost parametra razlikuje od dejanske neznane vrednosti pri ponovljenem vzorčenju.
-Vrednost standardne napake, oziroma v našem primeru njena ocena, nam torej določata velikost intervala okoli naše poračunane ocene za $\theta$ po metodi največjega verjetja. Na sliki je za vsako vrsto Kromatina to tudi označeno s prosojno obarvanim območjem, pri čemer meje intervala dodatno nakazuje vodoravna črtkasta daljica. 
+Vrednost standardne napake, oziroma v našem primeru njena ocena, nam torej določata velikost intervala okoli naše poračunane ocene za $\theta$ po metodi največjega verjetja. Na sliki je za vsako vrsto Kromatina to tudi označeno s prosojno obarvanim območjem, pri čemer meje intervala dodatno nakazuje vodoravna črtkasta črta. 
 
 Vredno je omeniti tudi grafično opaženo korelacijo med položnostjo zavzetja maksimuma funkcije verjetja in velikostjo (ocene) standardne napake za pripadajočo vrsto Kromatina.
 Vidno je namreč, da sta številski oceni za standardni napaki kratkega in srednjega Kromatina skoraj enaki, kar se ujema z skoraj enakima širinama$~$"hriba"$~$na vrhu katerega funkcija zavzame maksimum. 
 V primerjavi s kratkim in srednjim Kromatinom, je številska ocena za standardno napako pri dolgem Kromatinu večja. 
-Prav tako hitro vidimo, da pri grafu verjetja za dolgi Kromatin maksimum zavzamemo nekoliko bolj položno oziroma je širini že omenjenega$~$"hriba"$~$vidno večja.
+Prav tako hitro vidimo, da pri grafu verjetja za dolgi Kromatin maksimum zavzamemo nekoliko bolj položno, oziroma je širini že omenjenega$~$"hriba"$~$vidno večja.
 Opaženo je v resnici iz teoretičnega vidika pričakovano že iz zgornje interpretacije vrednosti standardne napake. 
 \newline
 \newline
@@ -220,14 +220,14 @@ Sedaj se lotimo podnaloge e). Že zgoraj omenjena $python$ datoteka nam poda št
 Te znašajo $1.1706$ za kratek Kromatin, $2.0748$ za srednji Kromatin in $3.4045$ za dolgi Kromatin.
 Oceno za napako iščemo na podoben način, kot smo to storili pri metodi največjega verjetja. Tokrat bo številska ocena za $\theta$ tista iz metode momentov, faktor pred napako pa ustrezno drugačen. Natančneje, za oceno uporabimo:
 $$
-    \hat{SE}(\hat{\theta}_{MM}) = \sqrt{\frac{4 - \pi}{\pi n}} \cdot\hat{\theta}_{MM}.
+    \widehat{SE}(\hat{\theta}_{MM}) = \sqrt{\frac{4 - \pi}{\pi n}} \cdot\hat{\theta}_{MM}.
 $$
 Številske ocene znašajo $0.06245$ za kratek Kromatin, $0.068731$ za srednji Kromatin in $0.154895$ za dolgi Kromatin.
 \newline
 Opazimo, da so številske vrednosti ocen standardnih napak (za $\theta$ po metodi momentov in po metodi največjega verjetja) pri enaki vrsti Kromatina skoraj enake. 
-Slednje je seveda razumljivo, saj smo za oceno standardne napake vzeli koren asimptotične ocene srednje kvadratične napake, pri čemer smo $\theta$ nadomestili z glede na metodo določeno cenilko. 
-Ker nam metoda največjega verjetja asimptotične daje boljšo cenilko, je tudi ocena za standardno napako, pridobljena prek te metode manjša. 
-Pomen (ocene) standardne napake je enak tistemu, ki smo ga komentirali na začetku obravnave metode največjega verjetja.
+Slednje je seveda razumljivo, saj sta že vrednosti ocen za $\theta$ skoraj enaki, za oceno standardne napake pa smo vzeli koren asimptotične ocene srednje kvadratične napake, pri čemer smo $\theta$ nadomestili z glede na metodo določeno cenilko. 
+Ker nam metoda največjega verjetja asimptotične da boljšo cenilko, je tudi ocena za standardno napako, pridobljena prek te metode manjša. 
+Pomen (ocene) standardne napake je enak tistemu, ki smo ga komentirali na začetku obravnave ocene standardne napake pri metodi največjega verjetja.
 Če le ponovimo, gre za vrednost, ki meri/nam pomaga razumeti, kako se ocenjena vrednost parametra lahko razlikuje od dejanske neznane vrednosti pri ponovljenem vzorčenju.
 \newline
 \newline
@@ -246,7 +246,7 @@ Vredno je omeniti, da gre za prikaz skaliranih (množili smo s skupno površino 
 \newline
 Sedaj zapišimo nekaj splošnih opazk.
 Pri histogramu za srednji Kromatin opazimo, da se grafa ocen gostot skoraj ujemata, obenem pa se (izmed vseh vrst Kromatina) oceni gostot najbolj prilegata podatkom, predstavljenim s histogramom. 
-Skorajšno prekrivanje ocen gostot na omenjenem grafu, je posledica bližine vrednosti za oceno cenilke obeh metod ($2.0748$ pri metodi momentov,  in $2.0812$ pri metodi največjega verjetja).
+Skorajšno prekrivanje ocen gostot na omenjenem grafu, je posledica bližine vrednosti cenilk po obeh metodah ($2.0748$ pri metodi momentov,  in $2.0812$ pri metodi največjega verjetja).
 Oceni za gostoti se pri dolgem Kromatinu dokaj dobro ujemata z obliko histograma okoli vrednosti $4$, ter v desnem robu prikaza, drugod pa se obe gostoti minimalno odmakneta od histograma. 
 Nekoliko manj smo lahko navdušeni nad ujemanjem grafov gostot s histogramom pri podatkih kratkega Kromatina. Tu je pomanjkanje ujemanja nekoliko posledica tudi tega, da pri izbiri števila blokov za ta primer število zaokrožimo navzgor.
 Če število blokov za ta primer ročno zmanjšamo za $1$, pridemo do nekoliko lepšega ujemanja, vidnega na spodnji sliki.
@@ -264,7 +264,7 @@ Kljub temu smo lahko nad ujemanjem gostot (med seboj) in histograma pri vseh vrs
 \section{Temperatura}
 
 Naloga nam pove, da imamo podane mesečne temperature (torej $12$ podatkov letno) za $n$ zaporednih let (v našem primeru podatki med letoma $1986$ in $2020$, torej $n = 35$).
-Smiselno je podatke o meritvah zapisati kot urejene pare, da se bomo lahko problema lotili z linearno regresijo.
+Smiselno je podatke o meritvah zapisati kot urejene pare, da se bomo lahko problema lotili z enostavno linearno regresijo.
 Opažene meritve so smiselno časovne urejene (leto-mesec), zato si podatke lahko predstavljamo kot pare $(x_i,~y_i)_{i=1,~2,~\dots,~12n}$, kjer $x_i$ predstavlja časovno komponento problema, $y_i$ pa opaženo temperaturo pri časovno $i$-ti meritvi. 
 V resnici lahko le pretvorimo podatek oblike: $(leto,~mesec,~temperatura)$ v par $(leto + mesec/12,~temperatura)$.
 Lotimo se najprej podnaloge a), z enostavno linearno regresijo.
@@ -299,6 +299,7 @@ Konstruiramo zgoraj definirane matrike in po formuli za $\hat{\beta}$ poračunam
 Številska ocena za $\beta_1$ je za nas (iz vidika podnaloge a)) nekoliko bolj zanimiva, saj njena vrednost opisuje (glede na podatke) opažen linearen trend (v tem primeru zaradi pozitivnosti številske ocene) naraščanja temperature skozi leta.
 Ta nam nakazuje, da se v povprečju temperatura letno dvigne za $0.068303$ stopinje. 
 Podatki so grafično predstavljeni na spodnji sliki. 
+
 \begin{figure}[H]
     \begin{center}
     \includegraphics[width=\linewidth]{naloga3a.png}
@@ -312,18 +313,18 @@ Oglejmo si, ali je opisan linearen trend spreminjanja temperature s časom stati
 Na tej točki je vredno omeniti, da je za nadeljevanje potrebno predpostaviti, da so šumi med seboj neodvisni in porazdeljeni normalno.
 Vemo, da številska ocena za $\beta_{1}$ znaša $0.068303$. 
 Radi bi preverili, ali bomo uspeli zavrniti ustrezno ničelno domnevo (ki bo predpostavljala, da ni linearnega trenda) pri standardni stopnji tveganja. 
-V resnici bo potrebno konstruirati ničelno in alternativno hipotezo, ter testno statistiko, ki bo uporabila oceno za $\beta_1$ (torej bo vezana na $\hat{\beta}_1$). Želeli bi, da bo le-ta zavrnila ničelno hipotezo, ko bo ta v resnici izpoljena, z verjetnostjo, ki bo manjča ali enaka $0.05$. 
+V resnici bo potrebno konstruirati ničelno in alternativno hipotezo, ter testno statistiko, ki bo uporabila oceno za $\beta_1$ (torej bo vezana na $\hat{\beta}_1$). Želeli bi, da bo le-ta zavrnila ničelno hipotezo, ko bo ta v resnici izpoljena, z verjetnostjo, ki bo manjša ali enaka $0.05$. 
 \newline
 Zapišimo sedaj hipotezi:
 $$
 \text{ničelna hipoteza, H}_0:~\beta_1 = 0,~\text{ter alternativna hipoteza, H}_1:~\beta_1 \neq 0.
 $$
-Iščemo testno statistiko, ki bo vsebovala $\hat{\beta}_1,~\text{ter bo spoštovala:}$
+Kot omenjeno, iščemo testno statistiko, ki bo vsebovala $\hat{\beta}_1,~\text{ter bo spoštovala:}$
 $$
 \text{P($\text{H}_0$ zavrnemo $|$ $\text{H}_0$ drži) $\leq \alpha = 0.05$}. 
 $$
 Opazimo, da lahko $\beta_1$ zapišemo tudi kot $[0,~1]\beta = c^T\beta$, oziroma $\hat{\beta}_1 = c^T\hat{\beta}$.
-To nam koristi, saj si sedaj lahko pomagamo z iz predavanja znanim dejstvom, ki nam pove, da:
+To nam koristi, saj si sedaj lahko pomagamo z iz predavanj znanim dejstvom, ki nam pove, da:
 $$
     \frac{c^T\hat{\beta} - c^T \beta}{\sigma\sqrt{1 + c^T(X^TX)^{-1}c}}~\sim~\text{N}(0,~1), 
 $$
@@ -331,9 +332,10 @@ oziroma, za nas nekoliko bolj koristno (ker bomo varianco morali nepristransko o
 $$
 \frac{c^T\hat{\beta} - c^T \beta}{\hat{\sigma}_{+}\sqrt{1 + c^T(X^TX)^{-1}c}}~\sim~\text{Student}(m - p),~\text{ter}~ \hat{\sigma}_{+} = \frac{||Y - X\hat{\beta}||}{\sqrt{m - p}}.
 $$
+Omenimo, da tu $m$ predstavlja število podatkov (pri nas $m = 12n = 420$), $p$ pa število koeficientov regresije (pri nas $p = 2$).
 Sedaj konstruirajmo test, pri katerem bo relevantno, ali velja:
 $$
-    |\hat{\beta}_1| = |c^T\hat{\beta}| < D,~\text{kjer bomo $D$ še določili prek zgornjega pogoja za verjetnost}.
+    |\hat{\beta}_1| = |c^T\hat{\beta}| < D.~\text{Tu bomo $D$ še določili prek zgornjega pogoja za verjetnost}.
 $$
 Prek testa bomo $\text{H}_0$ zavrnili, če bo $|\hat{\beta}_1| = |c^T\hat{\beta}| \geq D$. Torej želimo, tak $D$, da bo veljalo:
 $$
@@ -368,8 +370,10 @@ Iščemo torej $\alpha_p$, tako da bo veljalo:
 $$
 \text{P}\left(|Z| \geq \frac{c^T\hat{\beta}}{\hat{\sigma}_{+}\sqrt{1 + c^T(X^TX)^{-1}c}}\right) = \alpha_p,~\text{kjer }Z~\sim~\text{Student}(418). 
 $$
-Upoštevamo simetričnost, program $python$ pa nam problem reducira na: $P(Z \leq 0.00903021) = 1 - \frac{\alpha_p}{2}$, s pomočjo \cite{student} pa dobimo še oceno $\alpha_p = 0.7482$.
-\newline
+Upoštevamo simetričnost, program $python$ pa nam problem reducira na: 
+$$
+P(Z \leq 0.00903021) = 1 - \frac{\alpha_p}{2},~\text{s pomočjo \cite{student} pa dobimo še oceno $\alpha_p = 0.7482$.}
+$$
 Opomnimo, da bi si statistično značilnost lahko ogledali tudi prek p-vrednosti. Če je p-vrednost manjša od standardne stopnje tveganja, potem imamo statistično značilnost, če pa je p-vrednost večja, statistične značilnosti nimamo. 
 Hitro opazimo, da je v tem primeru seveda p-vrednost večja od standardne stopnje tveganja, zato še dodatno potrdimo, da nimamo statistične značilnosti linearnega trenda spreminjanja temperature s časom.
 \newline
@@ -389,10 +393,10 @@ Vredno je poskusiti z modelom oblike:
 $$
     y_j = \beta_0 x_j + \sum_{i=1}^{12}{\beta_{i}~\mathds{1}_i(x_j)} + \epsilon_j,~j \in \{1,~2,~\dots,~12n\}.
 $$
-Zapisan model si v resnici lahko predstavljamo kot posplošitev modela iz prve podnaloge, z različno vrednostjo konstantne člena za podatke vsakega meseca. 
+Zapisan model, si v resnici lahko predstavljamo kot posplošitev modela iz prve podnaloge z različno vrednostjo konstantne člena za podatke vsakega meseca. 
 \newline
 \newline
-Sedaj lahko zapišimo v  matrični obliki in postopajmo prek postopka za linearno regresijo. 
+Sedaj lahko zapišimo v  matrični obliki in postopamo prek postopka za linearno regresijo. 
 $$
 X= \left[\begin{array}{c:ccccc}
     x_1 & 1 & 0 & 0 & \dots & 0 \\
@@ -439,17 +443,17 @@ Podatke spet vnesemo v zgoraj omenjeno $python$ datoteko, ki nam (po formuli za 
 \end{split}
 \end{equation*}
 Opazimo, da se vrednosti številskih ocen za $\beta_1,~\beta_2,~\dots,~\beta_{12}$ gibljejo okoli vrednosti iz prejšnega primera (enostavna linearna regresija, kjer je bila vrednost številske ocene za $\beta_1$ enaka $-125.5905$). 
-To je bilo seveda za pričakovati, saj kot smo že omenili, gre pri vrednostih $\beta_1,~\beta_2,~\dots,~\beta_{12}$ le za prek meseca določeno konstanto (mesecu pripada njegova zaporedna številka, zaporedni številki pa pripadajoča zaporedna koordinatna ocena za $\beta$), v primeru enostavnega slučajnega vzorčenja, pa je $\beta_1$ predstavljala konstanto, določeno ne glede na mesec (torej za vse mesece hkrati). 
+To je bilo seveda za pričakovati, saj kot smo že omenili, gre pri vrednostih $\beta_1,~\beta_2,~\dots,~\beta_{12}$ le za prek meseca določeno konstanto (mesecu pripada njegova zaporedna številka, zaporedni številki pa pripadajoča zaporedna ocena koordinate za $\beta$), v primeru enostavnega slučajnega vzorčenja, pa je $\beta_1$ predstavljala konstanto, določeno ne glede na mesec (torej za vse mesece hkrati). 
 Vredno je omeniti tudi, da so konstante pri tipično bolj toplih mesecih (na primer maj-$5$, junij-$6$, julij-$7$) nekoliko večje, pri tipično nekoliko hladnejših mesecih (na primer november-$11$, december-$12$, januar-$1$), pa nekoliko manjše.
 Zgoraj omenjene opazke, se ujemajo z intuicijo spreminjanja temperature skozi leto in nakazujejo ustrezno posplošitev modela enostavne linearne regresije na model, ki upošteva tudi letno nihanje temperature. 
 \newline
 \newline
-Sedaj si oglejmo linearen trend spreminjanja temperature (skozi leta), v tako zastavljenem modelu. V ta namen se osredotočimo na številsko vrednost ocene za $\beta_0$. Ta je dokaj blizu številski vrednosti ocene za $\beta_0$ iz enostavne linearne regresije (v tem modelu dobimo oceno, ki znaša $0.064636$, v modelu enostavne linearne regresije pa $0.068303$). 
+Sedaj si oglejmo linearen trend spreminjanja temperature (skozi leta), v tako zastavljenem modelu. V ta namen se osredotočimo na številsko vrednost ocene za $\beta_0$. Ta je dokaj blizu številski vrednosti ocene za $\beta_1$ iz enostavne linearne regresije (v tem modelu dobimo oceno, ki znaša $0.064636$, v modelu enostavne linearne regresije pa $0.068303$). 
 Novejši model nam torej nakazuje nekoliko položneje naraščajoč linearen trend spreminjanja temperature, oziroma ocenjuje, da se temperatura letno dvigne povprečno za $0.064636$ stopinje.
 \newline
 \newline 
-Izračuna p-vrednosti pri tem delu naloge, se lotimo podobno kot pri prejšnem. Zapišimo $\hat{\beta}_0 = c^T\hat{\beta}$, kjer tokrat $c^T = [1,~0,~\dots,~0]$.
-Spet išemo $\alpha_p$, tako da bo veljalo:
+Izračuna p-vrednosti, pri tem delu naloge, se lotimo podobno kot pri prejšnem. Zapišimo $\hat{\beta}_0 = c^T\hat{\beta}$, kjer tokrat $c^T = [1,~0,~\dots,~0]$.
+Spet išemo $\alpha_p$, tokrat pa bo moralo veljati:
 $$
 \text{P}\left(|Z| \geq \frac{c^T\hat{\beta}}{\hat{\sigma}_{+}\sqrt{1 + c^T(X^TX)^{-1}c}}\right) = \alpha_p,~\text{kjer }Z~\sim~\text{Student}(407). 
 $$
@@ -505,11 +509,11 @@ vredno pa je omeniti še, da $m$ predstavlja število podatkov (v našem primeru
 \newline
 Ker smo cenilko za januarsko temperaturo leta $2040$ zapisali kot $c_1^T \hat{\beta}$, bo interval zaupanja po zgornji formuli oblike:
 $$
-\left[c_1^T\hat{\beta} - F^{-1}_{\text{Student}}\left(1 - \frac{\alpha}{2}\right)\widehat{SEP}_{+} ,~c_1^T\hat{\beta} - F^{-1}_{\text{Student}}\left(1 + \frac{\alpha}{2}\right)\widehat{SEP}_{+} \right]
+\left[c_1^T\hat{\beta} - F^{-1}_{\text{Student}}\left(1 - \frac{\alpha}{2}\right)\widehat{SEP}_{+} ,~c_1^T\hat{\beta} - F^{-1}_{\text{Student}}\left(1 + \frac{\alpha}{2}\right)\widehat{SEP}_{+} \right].
 $$
-Sedaj se za pomoč pri izračunavi ponovno obrnemo na program $python$, pri iskanju približka vrednosti inverza Studentove porazdelitve (pri nas stopnje $420 - 13 = 407$) pa nam na pomoč priskoči \cite{student}. 
+Sedaj se za pomoč pri izračunavi ponovno obrnemo na program $python$, pri iskanju približka vrednosti inverza Studentove porazdelitve (pri nas prostorske stopnje $420 - 13 = 407$) pa nam na pomoč priskoči \cite{student}. 
 Navodila iz začetka projektne naloge narekujejo, da moramo interval zaupanja izračunati tako pri $\alpha = 0.01$, kot tudi pri $\alpha = 0.05$. 
-Izračuni nam povedo, da stopnji tveganja $0.05$ pripada interval zaupanja $[-0.1607,~6.6466]$, pri stopnji tveganja $0.01$ pa je interval zaupanja pričakovano nekoliko večji in je $[-1.2379,~7.7238]$.
+Izračuni nam povedo, da stopnji tveganja $0.05$ pripada interval zaupanja $[-0.1607,~6.6466]$, pri stopnji tveganja $0.01$ pa je interval zaupanja pričakovano nekoliko večji in je enak $[-1.2379,~7.7238]$.
 
 
 
@@ -548,7 +552,7 @@ Določimo še intervala zaupanja za oceno povprečne temperature v letu $2040$. 
 $$
 [\tilde{c}^T\hat{\beta} - F^{-1}_{\text{Student}}\left(1 - \frac{\alpha}{2}\right)\widehat{SEP}_{+} ,~\tilde{c}^T\hat{\beta} - F^{-1}_{\text{Student}}\left(1 + \frac{\alpha}{2}\right)\widehat{SEP}_{+} ].
 $$
-Številske vrednosti intervala so pri stopnji tveganaj 0.05 enake $[10.2445,~17.0519]$, pri stopnji tveganja $0.01$ pa $[9.1673,~18.1291]$.
+Številske vrednosti intervala so pri stopnji tveganja 0.05 enake $[10.2445,~17.0519]$, pri stopnji tveganja $0.01$ pa $[9.1673,~18.1291]$.
 
 
 
